--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "yolov7"]
 	path = yolov7
 	url = https://github.com/WongKinYiu/yolov7.git
+[submodule "LAVIS"]
+	path = LAVIS
+	url = https://github.com/salesforce/LAVIS.git
