--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /.ipynb_checkpoints/
 */__pycache__/
 /yolov7/*
-
-
-/images_captionning_results/*
+/.vscode/
+/.idea/
+/gdrivedl/
+/preprocessing/images_captionning_results/*
